fix: fix validation in password pattern

--- a/admin/pages/leader_portfoie/mla_admin_list.html
+++ b/admin/pages/leader_portfoie/mla_admin_list.html
@@ -206,104 +206,11 @@
 
 
     <!-- Dashboard -->
-    <div class="d-flex flex-column flex-lg-row h-lg-full bg-surface-secondary">
+    <div class="d-flex flex-column flex-lg-row h-lg-full bg-surface-secondary" id="nave_side">
         <!-- Vertical Navbar -->
-        <nav class="navbar show navbar-vertical h-lg-screen navbar-expand-lg px-0 py-3 navbar-light bg-white border-bottom border-bottom-lg-0 border-end-lg"
-            id="navbarVertical">
-            <div class="container-fluid">
-                <!-- Toggler -->
-                <button class="navbar-toggler ms-n2" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#sidebarCollapse" aria-controls="sidebarCollapse" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <!-- Brand -->
-                <a class="navbar-brand py-lg-2 mb-lg-5 px-lg-6 me-0" href="#">
-                    POITIFACT
-                </a>
-                <!-- User menu (mobile) -->
-                <div class="navbar-user d-lg-none">
-                    <!-- Dropdown -->
-                    <div class="dropdown">
-                        <!-- Toggle -->
-                        <a href="#" id="sidebarAvatar" role="button" data-bs-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false">
-                            <div class="avatar-parent-child">
-                                <img alt="Image Placeholder"
-                                    src="https://images.unsplash.com/photo-1548142813-c348350df52b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=3&w=256&h=256&q=80"
-                                    class="avatar avatar- rounded-circle">
-                                <span class="avatar-child avatar-badge bg-success"></span>
-                            </div>
-                        </a>
-                        <!-- Menu -->
-                        <div class="dropdown-menu dropdown-menu-end" aria-labelledby="sidebarAvatar">
-                            <a href="#" class="dropdown-item">Profile</a>
 
-                            <hr class="dropdown-divider">
-                            <a href="#" class="dropdown-item">Logout</a>
-                        </div>
-                    </div>
-                </div>
-                <!-- Collapse -->
-                <div class="collapse navbar-collapse" id="sidebarCollapse">
-                    <!-- Navigation -->
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <i class="bi bi-house"></i> Dashboard
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <i class="bi bi-bar-chart"></i> create list
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <i class="bi bi-chat"></i> comments
-                                <span
-                                    class="badge bg-soft-primary text-primary rounded-pill d-inline-flex align-items-center ms-auto">6</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <i class="bi bi-bookmarks"></i> manifesto
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <i class="bi bi-people"></i> bloger
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <i class="bi bi-people"></i> users
-                            </a>
-                        </li>
-                    </ul>
-                    <!-- Divider -->
-                    <hr class="navbar-divider my-5 opacity-20">
-
-                    <!-- Push content down -->
-                    <div class="mt-auto"></div>
-                    <!-- User (md) -->
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <i class="bi bi-person-square"></i> Account
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <i class="bi bi-box-arrow-left"></i> Logout
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
         <!-- Main content -->
-        <div class="h-screen flex-grow-1 overflow-y-lg-auto">
+        <div class="h-screen flex-grow-1 overflow-y-lg-auto" >
             <!-- Header -->
             <header class="bg-surface-primary border-bottom pt-6">
                 <div class="container-fluid">
@@ -386,33 +293,33 @@
 
 
                                     <div class="left">
-                                        <label for="politics_radio">Tamil name</label>
-                                        <input type="text" id="tname" value="name" placeholder="Tamil Name" required />
-                                        <label for="politics_radio">English name</label>
-                                        <input type="text" id="ename" placeholder="English Name" required />
+                                        <label for="politics_radio">candidate Name</label>
+                                        <input type="text" id="candidate_Name" value="name" placeholder="Tamil Name"
+                                            required />
+
+
+                                        <label for="politics_radio">constituency_Name</label>
+                                        <input type="text" id="constituency_Name" placeholder="constituency Name"
+                                            required />
+
+
                                         <label for="politics_radio">Image URL</label>
                                         <input type="text" id="url" placeholder="Please insert your picture URL"
                                             required>
+
 
                                         <div class="col-sm-6">
                                             Position:
                                             <select class="form-select" aria-label="Default select example"
                                                 id="position" required pattern="[A-Za-z]" required>
                                                 <option selected>Enter your opinion</option>
-                                                <option value="CM">CM</option>
-                                                <option value="MP">MP</option>
                                                 <option value="MLA">MLA</option>
-                                                <option value="GOVERNER">GOVERNER</option>
 
                                             </select>
                                         </div>
-                                        <div class="from_date" style="display:block;">
-                                            <label for="">from_date</label>
-                                            <input type="date" id="date_f" required>
-                                        </div>
 
                                         <div>
-                                            <label for="movie_radio" id="movie">Movie</label>
+                                            <label for="movie_radio" id="movie">Achievement</label>
 
                                             <input type="radio" name="desc_radio" id="movie_radio" value="movie"
                                                 onclick="showDescription()" />
@@ -449,7 +356,7 @@
                                         <input type="text" id="party_name" placeholder="Party Name" required>
                                         <label for="politics_radio">Occupation</label>
                                         <input type="text" id="occupation" placeholder="occupation" required>
-                                        <label for="politics_radio">Politics Experiance</label>
+                                        <label for="politics_radio">Politics Experience</label>
                                         <input type="number" id="experiance" placeholder="experiance" required>
                                         <div class="from_date" style="display:block;">
                                             <label for="">To_date</label>
@@ -658,9 +565,9 @@
         function updateLeader(leader) {
             // Set form values to current leader data
 
-            document.getElementById("tname").value = leader.candidate_Name;
+            document.getElementById("candidate_Name").value = leader.candidate_Name;
 
-            document.getElementById("ename").value = leader.constituency_Name;
+            document.getElementById("constituency_Name").value = leader.constituency_Name;
 
             document.getElementById("position").value = leader.party;
 
@@ -737,7 +644,7 @@
 
 
             const leaderdata = {
-               candidate_Name: tamil_name,
+                candidate_Name: tamil_name,
                 img: {
                     source: img_url,
                     alter: tamil_name,
@@ -820,6 +727,8 @@
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script src="../../admin_main.js"></script>
 </body>
 
 </html>
