--- a/admin/pages/manifesto/manifesto_create.html
+++ b/admin/pages/manifesto/manifesto_create.html
@@ -118,7 +118,7 @@
 
 <body>
     <div class="container">
-        <h1>This is an Menifesto create page</h1>
+        <h1>This is an Manifesto create page</h1>
 
         <div class="row">
             <div class="col-sm-6">
