--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
 <body>
-   
+
 
 
     <!-- background vidieo -->
@@ -92,6 +92,17 @@
 
             </div>
 
+        </div>
+
+    </div>
+
+    <div class="information p-5">
+        <div class="image1 d-flex justify-content-around align-items-center flex-wrap">
+            <img class="img-fluid p-5" src="assets/images/essecial/IMG_20230427_121742.jpg" alt="">
+            <img class="img-fluid p-4" src="assets/images/essecial/ADMINISTRATIVE-STRUCTURE-AND-HIERACRCHY-IN-INDIA.png"
+                alt="">
+            <img class="img-fluid p-5"
+                src="assets/images/essecial/2021_Tamil_Nadu_Legislative_Assembly_election_result.png" alt="">
         </div>
 
     </div>
