--- a/pages/more/mla.html
+++ b/pages/more/mla.html
@@ -26,12 +26,19 @@
     <button id="sortName">Sort by Name</button>
     <button id="sortMargin">Sort by Margin</button>
 
-    <div class="mla-list-intro">
+    
+
+    <div class="mla-list-intro d-flex">
+        <div>
         <p><strong>பிரதிநிதிகள்:</strong></p>
         <p>தமிழ்நாடு சட்டசபையில் 234 தொகுதிகள் உள்ளன. கடைசியாக தமிழ்நாடு சட்டசபைக்கு எம்எல்ஏக்கள் தேர்வு
             செய்யப்பட்டது மே 2021. திமுக வென்ற தொகுதிகள் 125, அதிமுக வென்ற தொகுதிகள் 65 இடங்கள், மற்றவர்கள் வென்றது
             44 தொகுதிகள். தமிழ்நாடு சட்டசபைத் தேர்தலில் ஒவ்வொரு கட்சியிலிருந்தும் வென்றவர்களின் விரிவான பட்டியல்.
         </p>
+    </div>
+    <div>
+        <p>If you don't know your constituency you can take your voter id from the backside Assembly constituency NO & Name you can search that number in the input field which shows your constituency. <img src="../../assets/images/essecial/IMG_20230427_140143.jpg" style="width: 500px; height: 100px;" alt=""></p>
+    </div>
     </div>
 
     <div class="governer">
