--- a/admin/pages/leader_portfoie/politicin_create.html
+++ b/admin/pages/leader_portfoie/politicin_create.html
@@ -123,102 +123,9 @@
 
 
     <!-- Dashboard -->
-    <div class="d-flex flex-column flex-lg-row h-lg-full bg-surface-secondary">
+    <div class="d-flex flex-column flex-lg-row h-lg-full bg-surface-secondary" id="nave_side">
         <!-- Vertical Navbar -->
-        <nav class="navbar show navbar-vertical h-lg-screen navbar-expand-lg px-0 py-3 navbar-light bg-white border-bottom border-bottom-lg-0 border-end-lg"
-            id="navbarVertical">
-            <div class="container-fluid">
-                <!-- Toggler -->
-                <button class="navbar-toggler ms-n2" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#sidebarCollapse" aria-controls="sidebarCollapse" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <!-- Brand -->
-                <a class="navbar-brand py-lg-2 mb-lg-5 px-lg-6 me-0" href="#">
-                    POITIFACT
-                </a>
-                <!-- User menu (mobile) -->
-                <div class="navbar-user d-lg-none">
-                    <!-- Dropdown -->
-                    <div class="dropdown">
-                        <!-- Toggle -->
-                        <a href="#" id="sidebarAvatar" role="button" data-bs-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false">
-                            <div class="avatar-parent-child">
-                                <img alt="Image Placeholder"
-                                    src="https://images.unsplash.com/photo-1548142813-c348350df52b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=3&w=256&h=256&q=80"
-                                    class="avatar avatar- rounded-circle">
-                                <span class="avatar-child avatar-badge bg-success"></span>
-                            </div>
-                        </a>
-                        <!-- Menu -->
-                        <div class="dropdown-menu dropdown-menu-end" aria-labelledby="sidebarAvatar">
-                            <a href="#" class="dropdown-item">Profile</a>
-
-                            <hr class="dropdown-divider">
-                            <a href="#" class="dropdown-item">Logout</a>
-                        </div>
-                    </div>
-                </div>
-                <!-- Collapse -->
-                <div class="collapse navbar-collapse" id="sidebarCollapse">
-                    <!-- Navigation -->
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <i class="bi bi-house"></i> Dashboard
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <i class="bi bi-bar-chart"></i> create list
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <i class="bi bi-chat"></i> comments
-                                <span
-                                    class="badge bg-soft-primary text-primary rounded-pill d-inline-flex align-items-center ms-auto">6</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <i class="bi bi-bookmarks"></i> manifesto
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <i class="bi bi-people"></i> bloger
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <i class="bi bi-people"></i> users
-                            </a>
-                        </li>
-                    </ul>
-                    <!-- Divider -->
-                    <hr class="navbar-divider my-5 opacity-20">
-
-                    <!-- Push content down -->
-                    <div class="mt-auto"></div>
-                    <!-- User (md) -->
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <i class="bi bi-person-square"></i> Account
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <i class="bi bi-box-arrow-left"></i> Logout
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+      
         <!-- Main content -->
         <div class="h-screen flex-grow-1 overflow-y-lg-auto">
             <!-- Header -->
@@ -302,9 +209,14 @@
 
                                     <div class="left">
                                         <label for="politics_radio">Tamil name</label>
-                                        <input type="text" id="tname" value="name" placeholder="Tamil Name" required />
+                                        <input type="text" id="tname" value="name" placeholder="Tamil Name" required pattern="[\u0B80-\u0BFF]+" />
+
+
+
                                         <label for="politics_radio">English name</label>
-                                        <input type="text" id="ename" placeholder="English Name" required />
+                                        <input type="text" id="ename" placeholder="English Name" required/>
+
+
                                         <label for="politics_radio">Image URL</label>
                                         <input type="text" id="url" placeholder="Please insert your picture URL"
                                             required>
@@ -314,16 +226,20 @@
                                             <select class="form-select" aria-label="Default select example"
                                                 id="position" required pattern="[A-Za-z]" required>
                                                 <option selected>Enter your opinion</option>
-                                                <option value="CM">CM</option>
-                                                <option value="MP">MP</option>
-                                                <option value="MLA">MLA</option>
-                                                <option value="GOVERNER">GOVERNER</option>
+                                                <option value="முதல் அமைச்சர்">முதல் அமைச்சர்</option>
+                                                <option value="நாடாளுமன்ற உறுப்பினர்">நாடாளுமன்ற உறுப்பினர்</option>
+                                                <option value="நாடாளுமன்ற உறுப்பினர்">நாடாளுமன்ற உறுப்பினர்</option>
+                                                <option value="ஆளுநர்">ஆளுநர்</option>
 
                                             </select>
                                         </div>
                                         <div class="from_date" style="display:block;">
+
+
                                             <label for="">from_date</label>
+
                                             <input type="date" id="date_f" required>
+
                                         </div>
 
                                         <div>
@@ -332,7 +248,7 @@
                                             <input type="radio" name="desc_radio" id="movie_radio" value="movie"
                                                 onclick="showDescription()" />
                                             <textarea name="" id="description" cols="90" rows="7" style="display:none;"
-                                                required></textarea>
+                                                required pattern="[\u0B80-\u0BFF]+"></textarea>
                                         </div>
 
 
@@ -342,7 +258,7 @@
                                                 onclick="showDescription()" />
                                             <div>
                                                 <textarea name="" id="description1" cols="90" rows="7"
-                                                    style="display:none;" required></textarea>
+                                                    style="display:none;" required pattern="[\u0B80-\u0BFF]+"></textarea>
                                             </div>
 
                                         </div>
@@ -353,17 +269,22 @@
                                             <input type="radio" name="desc_radio" id="income_radio" value="income"
                                                 onclick="showDescription()" />
                                             <textarea name="" id="description2" cols="90" rows="7" style="display:none;"
-                                                required></textarea>
+                                                required pattern="[\u0B80-\u0BFF]+"></textarea>
                                         </div>
                                     </div>
                                     <div class="right">
 
                                         <label for="politics_radio">Role</label>
-                                        <input type="text" id="role" placeholder="role" required>
+
+
+                                        <input type="text" id="role" placeholder="role" required pattern="[\u0B80-\u0BFF]+">
+
+
                                         <label for="politics_radio">Party name</label>
-                                        <input type="text" id="party_name" placeholder="Party Name" required>
+                                        <input type="text" id="party_name" placeholder="Party Name" pattern="[\u0B80-\u0BFF]+" required>
                                         <label for="politics_radio">Occupation</label>
-                                        <input type="text" id="occupation" placeholder="occupation" required>
+
+                                        <input type="text" id="occupation" placeholder="occupation" required pattern="[\u0B80-\u0BFF]+">
                                         <label for="politics_radio">Politics Experiance</label>
                                         <input type="number" id="experiance" placeholder="experiance" required>
                                         <div class="from_date" style="display:block;">
@@ -534,6 +455,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <script src="../../assets/js/leader_profile_create.js"></script>
+    <script src="../../admin_main.js"></script>
 </body>
 
 </html>
