--- a/pages/like_list.html
+++ b/pages/like_list.html
@@ -5,11 +5,16 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="../assets/css/main.css">
   <title>Document</title>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     html,
     body {
-      background: #1a1a1a;
+      /* background: #1a1a1a; */
       font-family: 'Lato', sans-serif;
     }
 
@@ -24,15 +29,16 @@
 
     .card {
       height: 200px;
-      width: 400px;
+      width: 250px;
       display: inline-flex;
       justify-content: center;
       text-decoration: none;
+      margin: 60px;
     }
 
     .card-top {
       border-radius: 8px;
-      width: 400px;
+      width: 250px;
       background: white;
       height: 200px;
       position: absolute;
@@ -41,7 +47,7 @@
       box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     }
 
-    .card1 img{
+    .card1 img {
       background-size: cover;
       border: 3px solid white;
       border-radius: 10px;
@@ -72,6 +78,7 @@
       margin: 7px 0px;
     }
 
+
     .card-title {
       font-weight: bold;
       font-size: 1.3em;
@@ -82,14 +89,16 @@
 <body>
 
   <div class="card-container">
-   
+
   </div>
   <script src="../../assets/javascript/like_list.js"></script>
 
   <!-- script for bootstrap -->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-<!-- script for bootstrap -->
+  <script src="../main.js"></script>
+  <script src="../assets/javascript/translate.js"></script>
+  <!-- script for bootstrap -->
 </body>
 
 </html>
