--- a/pages/portfolio/potfolio.html
+++ b/pages/portfolio/potfolio.html
@@ -8,7 +8,7 @@
   <link href="../../assets/css/main.css" rel="stylesheet" />
   <!-- <link rel="stylesheet" href="../../assets/css/responsive.css"> -->
   <link rel="icon" type="image/jpg" sizes="60x32" href="../../assets/images/icons/p logo.jpg" />
- 
+
   <title>portfolieo</title>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -91,50 +91,50 @@
 
     }
 
-.rederect_button {
-	width: 150px;
-	height: 40px;
-  text-align: center;
-	cursor: pointer;
-	font-size: 15px;
-  margin-left: 25%;
-	font-weight: bold;
-	color: black;
-	background: white;
-	border: 2px solid black;
-	box-shadow: 5px 5px 0 black,
-		-5px -5px 0 rgb(66, 76, 216),
-		-5px 5px 0 rgb(167, 37, 126),
-		5px -5px 0 rgb(159, 224, 129);
-	transition: 0.5s ease-in-out;
-}
+    .rederect_button {
+      width: 150px;
+      height: 40px;
+      text-align: center;
+      cursor: pointer;
+      font-size: 15px;
+      margin-left: 25%;
+      font-weight: bold;
+      color: black;
+      background: white;
+      border: 2px solid black;
+      box-shadow: 5px 5px 0 black,
+        -5px -5px 0 rgb(66, 76, 216),
+        -5px 5px 0 rgb(167, 37, 126),
+        5px -5px 0 rgb(159, 224, 129);
+      transition: 0.5s ease-in-out;
+    }
 
-.rederect_button:focus {
-	outline: none;
-}
-
-    
+    .rederect_button:focus {
+      outline: none;
+    }
   </style>
 </head>
 
 <body>
   <!-- navbar all -->
+  <div id="search_result"></div>
+  
 
- 
+
 
   <!-- portfolio start -->
-  
+
   <div class="lists1">
 
-    
+
   </div>
   <div class="create">
-   
+
   </div>
 
 
 
-  
+
 
   <script src="../../main.js"></script>
 
@@ -143,10 +143,10 @@
   <script src="../../assets/javascript/portfolieo.js"></script>
 
   <!-- script for bootstrap -->
-  
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-<!-- script for bootstrap -->
-<script src="../../assets/javascript/translate.js"></script>
+  <!-- script for bootstrap -->
+  <script src="../../assets/javascript/translate.js"></script>
 
 
 
